v1.6.2 (24/04/2020)
- restraints generation: use program name in script name for easier trouble-shooting

v1.6.1 (17/04/2020)
- added 7 - Analysed & Rejected' to refinement table combobox

v1.6.0 (14/04/2020)
- new option: directly refine bound-state only after pandda.inspect with buster

v1.5.17 (07/04/2020)
- add option to specify $SampleID in structure deposition title

v1.5.16 (06/04/2020)
- XChemThread: copy un-merged MTZ file for xia2, dials & 3d(ii)
- XChemThread: change parsing of auto-processing results to enable reading of multiple runs with same name, e.g. xia-3dii
- bug fix: enable 3dii only selection of auto-processing results
- remove xia2-3d only auto-processing selection option

v1.5.15 (06/04/2020)
- bug fix: found instance in pandda_inspect_events.csv where sites/ events displayed as float instead of int; added fix

v1.5.14 (14/03/2020)
- HTML export: enable changing of contour level of event maps
- HTML export: set ligand confidence to "not assigned" for deposition ready model that have "0 - no ligand bound"

v1.5.13 (11/03/2020)
- bug fix: include covlinks argument is None in XChemPANDDA quickRefine

v1.5.12 (10/03/2020)
- DIMPLE: added pointless step before dimple to reindex according to ref_pdb if necessary

v1.5.11 (10/03/2020)
- added linking of covalent binders for PanDDA models (refine.split-bound.pdb)
- remove links to refine.output... PDB files after refinement

v1.5.10 (05/03/2020)
- bug fix: correct name of event map in files directory

v1.5.9 (05/03/2020)
- bug fix: reading of .json scaling logfiles enabled during 'update database from filesystem'

v1.5.8 (04/03/2020)
- added Taxonomy ID for mus musculus

v1.5.7 (03/03/2020)
- bug fix: capture all available event maps during html export

v1.5.6 (02/03/2020)
- added Taxonomy ID for BAT SARS-LIKE CORONAVIRUS and COVID-19

v1.5.5 (27/02/2020)
- bug fix: update depositTable with ground_state_sf.mmcif if successfully created

v1.5.4 (27/02/2020)