@@ -292,9 +292,9 @@ class helpers:
             '\n'
             + software +
             '\n'
-            '$CCP4/bin/ccp4-python $XChemExplorer_DIR/helpers/assign_stereochemistry.py {0!s} {1!s} {2!s}'
-            .format(compoundID.replace(' ',''),os.path.join(initial_model_directory,sample), os.path.join(database_directory,data_source_file)) +
-            '\n'
+#            '$CCP4/bin/ccp4-python $XChemExplorer_DIR/helpers/assign_stereochemistry.py {0!s} {1!s} {2!s}'
+#            .format(compoundID.replace(' ',''),os.path.join(initial_model_directory,sample), os.path.join(database_directory,data_source_file)) +
+#            '\n'
             + copy_with_hydrogens +
             '\n'
             + strip_hydrogens +
